Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74394

BT LE: Disconnect not working, Notify on some devices not working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.13.0 Beta2
    • 5.13.0 Alpha 1
    • None
    • WinRT
    • 929d7446ead35b481fab8e5fef6cc889225f1143 4747a72d9a69f53760793ce0c0bb0154e43eca45 845e185b2881210b8f3a0dc25926c3d74b0008bf

      tested Bluetooth LE devices without pairing on Windows 10 Pro.

      Connecting Devices, Reading from / writing to devices works

      Notify works on Addimat Waiterlock, but not on Barcode Scanners or NFC Reader

      Disconnecting is never working.

      While testing and trying to disconnect / connect two times it happens that Windows 109 crashes when closing the App.

        For Gerrit Dashboard: QTBUG-74394
        # Subject Branch Project Status CR V

            owolff Oliver Wolff
            ekkescorner Ekkehard
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes