src/bluetooth/qlowenergycontroller_winrt_new.cpp
@@ -345,9 +345,7 @@ QLowEnergyControllerPrivateWinRTNew::~QLowEnergyControllerPrivateWinRTNew()
     if (mDevice && mStatusChangedToken.value)
         mDevice->remove_ConnectionStatusChanged(mStatusChangedToken);
 
-    qCDebug(QT_BT_WINRT) << "Unregistering " << mValueChangedTokens.count() << " value change tokens";
-    for (const ValueChangedEntry &entry : qAsConst(mValueChangedTokens))
-        entry.characteristic->remove_ValueChanged(entry.token);
+    unregisterFromValueChanges();
 }
 
 void QLowEnergyControllerPrivateWinRTNew::init()
@@ -397,7 +395,7 @@ void QLowEnergyControllerPrivateWinRTNew::connectToDevice()
                         && status == BluetoothConnectionStatus::BluetoothConnectionStatus_Connected) {
                     setState(QLowEnergyController::ConnectedState);
                     emit q->connected();
-                } else if (state == QLowEnergyController::ConnectedState
+                } else if (state != QLowEnergyController::UnconnectedState
                            && status == BluetoothConnectionStatus::BluetoothConnectionStatus_Disconnected) {
                     setError(QLowEnergyController::RemoteHostClosedError);
                     setState(QLowEnergyController::UnconnectedState);
@@ -522,9 +520,13 @@ void QLowEnergyControllerPrivateWinRTNew::disconnectFromDevice()
     Q_Q(QLowEnergyController);
     setState(QLowEnergyController::UnconnectedState);
     emit q->disconnected();
-    if (mDevice && mStatusChangedToken.value) {
-        mDevice->remove_ConnectionStatusChanged(mStatusChangedToken);
-        mStatusChangedToken.value = 0;
+    unregisterFromValueChanges();
+    if (mDevice) {
+        if (mStatusChangedToken.value) {
+            mDevice->remove_ConnectionStatusChanged(mStatusChangedToken);
+            mStatusChangedToken.value = 0;
+        }
+        mDevice = nullptr;
     }
 }
 
@@ -589,6 +591,17 @@ void QLowEnergyControllerPrivateWinRTNew::registerForValueChanges(const QBluetoo
     mValueChangedTokens.append(ValueChangedEntry(characteristic, token));
     qCDebug(QT_BT_WINRT) << "Characteristic" << charUuid << "in service"
         << serviceUuid << "registered for value changes";
+}
+
+void QLowEnergyControllerPrivateWinRTNew::unregisterFromValueChanges()
+{
+    qCDebug(QT_BT_WINRT) << "Unregistering " << mValueChangedTokens.count() << " value change tokens";
+    HRESULT hr;
+    for (const ValueChangedEntry &entry : qAsConst(mValueChangedTokens)) {
+        hr = entry.characteristic->remove_ValueChanged(entry.token);
+        Q_ASSERT_SUCCEEDED(hr);
+    }
+    mValueChangedTokens.clear();
 }
 
 void QLowEnergyControllerPrivateWinRTNew::obtainIncludedServices(
